rating: add rating_status to settings, with translations

--- a/docs/sql/settings.cfg
+++ b/docs/sql/settings.cfg
@@ -16,10 +16,18 @@
 ; - Field "db_field": corresponding database field (table.field)
 ;
 
+["rating_download[DWZ]"]
+description = "URL under which the current DWZ data of the German Chess Federation is available in SQL format"
+type = url
+
 ["rating_download[Elo]"]
 description = "URL under which the current FIDE Elo data is available in TXT format"
 type = url
 
-["rating_download[DWZ]"]
-description = "URL under which the current DWZ data of the German Chess Federation is available in SQL format"
-type = url
+["rating_status[DWZ]"]
+description = "Last imported status of the German DWZ database"
+type = date
+
+["rating_status[Elo]"]
+description = "Last imported status of the FIDE Elo database"
+type = date
