livefolders: move livefolders make script to tournaments module

--- a/docs/sql/settings.cfg
+++ b/docs/sql/settings.cfg
@@ -16,6 +16,10 @@
 ; - Field "db_field": corresponding database field (table.field)
 ;
 
+[live_folders_days]
+description = "No. of days before a tournament a folder for live PGNs per tournament is created."
+type = int
+
 ["rating_download[DWZ]"]
 description = "URL under which the current DWZ data of the German Chess Federation is available in SQL format"
 type = url
