--- a/docs/sql/settings.cfg
+++ b/docs/sql/settings.cfg
@@ -20,6 +20,10 @@
 description = "No. of days before a tournament a folder for live PGNs per tournament is created."
 type = int
 
+[live_games_show_for_days]
+description = "Number of days after the last round when the live games are not shown anymore under the /live-URL"
+type = int
+
 ["rating_download[DWZ]"]
 description = "URL under which the current DWZ data of the German Chess Federation is available in SQL format"
 type = url
