add setting home_team_first_board to change colour of home team on first board (default: black)

--- a/docs/sql/settings.cfg
+++ b/docs/sql/settings.cfg
@@ -39,3 +39,9 @@ type = date
 ["rating_status[Elo]"]
 description = "Last imported status of the FIDE Elo database"
 type = date
+
+[home_team_first_board]
+description = "Colour of player at first board of home team (default black, or white)"
+type = select
+enum = [black, white]
+default = black
