add function mf_tournaments_lineup(), checks whether a line-up can be made for a team for the current round

--- a/docs/sql/settings.cfg
+++ b/docs/sql/settings.cfg
@@ -1,7 +1,7 @@
 ; * Zugzwang Project
 ; * proposed settings for tournaments module
 ; *
-; * http://www.zugzwang.org/modules/tournaments
+; * https://www.zugzwang.org/modules/tournaments
 ; *
 ; * @author Gustaf Mossakowski <gustaf@koenige.org>
 ; * @copyright Copyright © 2020 Gustaf Mossakowski
@@ -15,6 +15,18 @@
 ; - Field "default": default value
 ; - Field "db_field": corresponding database field (table.field)
 ;
+
+[home_team_first_board]
+description = "Colour of player at first board of home team (default black, or white)"
+type = select
+enum = [black, white]
+default = black
+scope = [website, tournaments]
+
+[lineup_before_round_mins]
+description = "time in minutes before a round starts until team organisers have to submit the line-up for the current round. (default: 0, negative values are possible)"
+type = int
+scope = [tournaments]
 
 [live_folders_days]
 description = "No. of days before a tournament a folder for live PGNs per tournament is created."
@@ -39,9 +51,3 @@ type = date
 ["rating_status[Elo]"]
 description = "Last imported status of the FIDE Elo database"
 type = date
-
-[home_team_first_board]
-description = "Colour of player at first board of home team (default black, or white)"
-type = select
-enum = [black, white]
-default = black
