add setting 'pgn_match_round_table_board', if active, try to match PGN file to players via Round-tag (i. e. 2.3.1 = Round 2, Table 3, Board 1)

--- a/docs/sql/settings.cfg
+++ b/docs/sql/settings.cfg
@@ -36,6 +36,11 @@ type = int
 description = "Number of days after the last round when the live games are not shown anymore under the /live-URL"
 type = int
 
+[pgn_match_round_table_board]
+description = "Match Round, (Table, ) Board from PGN Round-tag if there are no matching names. (Important: do not use if PGNs from several tournaments are in one file!)"
+type = bool
+scope = [tournaments]
+
 ["rating_download[DWZ]"]
 description = "URL under which the current DWZ data of the German Chess Federation is available in SQL format"
 type = url
