--- a/docs/sql/settings.cfg
+++ b/docs/sql/settings.cfg
@@ -41,6 +41,10 @@ description = "Match Round, (Table, ) Board from PGN Round-tag if there are no m
 type = bool
 scope = [tournaments]
 
+[pgn_preparation_function]
+description = "If you get a PGN file with errors or missing names etc., you can chose to use a function to prepare that PGN file"
+scope = [website, tournaments]
+
 ["rating_download[DWZ]"]
 description = "URL under which the current DWZ data of the German Chess Federation is available in SQL format"
 type = url
