remarks: move table 'anmerkungen' to tournaments module, with hook function and mail template; move Subject: line to mail template; replace hardcoded mailto: with setting 'tournaments_remarks_mail_to'

--- a/docs/sql/settings.cfg
+++ b/docs/sql/settings.cfg
@@ -60,3 +60,7 @@ type = date
 ["rating_status[Elo]"]
 description = "Last imported status of the FIDE Elo database"
 type = date
+
+[tournaments_remarks_mail_to]
+description = "send mails with remarks to tournament registrations to this mail address"
+type = mail
