settings: add further settings and explanations

--- a/docs/sql/settings.cfg
+++ b/docs/sql/settings.cfg
@@ -4,7 +4,7 @@
 ; * https://www.zugzwang.org/modules/tournaments
 ; *
 ; * @author Gustaf Mossakowski <gustaf@koenige.org>
-; * @copyright Copyright © 2020 Gustaf Mossakowski
+; * @copyright Copyright © 2020-2021 Gustaf Mossakowski
 ; * @license http://opensource.org/licenses/lgpl-3.0.html LGPL-3.0
 ; 
 ; Syntax of this configuration file:
@@ -15,6 +15,10 @@
 ; - Field "default": default value
 ; - Field "db_field": corresponding database field (table.field)
 ;
+
+[filemove_begin_before_round_mins]
+description = "Time before the start of the round from which the PGN files (header tags) are transferred to the server"
+type = "int"
 
 [home_team_first_board]
 description = "Colour of player at first board of home team (default black, or white)"
@@ -28,12 +32,20 @@ description = "time in minutes before a round starts until team organisers have 
 type = int
 scope = [tournaments]
 
+[live_cache_control_age]
+description = "Cache-Control: max-age value for live games (in seconds)"
+type = int
+
 [live_folders_days]
 description = "No. of days before a tournament a folder for live PGNs per tournament is created."
 type = int
 
 [live_games_show_for_days]
 description = "Number of days after the last round when the live games are not shown anymore under the /live-URL"
+type = int
+
+[live_pgn_delay_mins]
+description = "Delay in the publication of PGN files for live broadcasts"
 type = int
 
 [pgn_match_round_table_board]
