move tournament export for Chess24 to tournaments module, add settings

--- a/docs/sql/settings.cfg
+++ b/docs/sql/settings.cfg
@@ -15,6 +15,9 @@
 ; - Field "default": default value
 ; - Field "db_field": corresponding database field (table.field)
 ;
+["chess24com[logo_url]"]
+description = "URL for logo of own organisation at chess24.com"
+type = url
 
 [filemove_begin_before_round_mins]
 description = "Time before the start of the round from which the PGN files (header tags) are transferred to the server"
