--- a/configuration/settings.cfg
+++ b/configuration/settings.cfg
@@ -1,11 +1,12 @@
-; * Zugzwang Project
-; * proposed settings for tournaments module
-; *
-; * https://www.zugzwang.org/modules/tournaments
-; *
-; * @author Gustaf Mossakowski <gustaf@koenige.org>
-; * @copyright Copyright © 2020-2021 Gustaf Mossakowski
-; * @license http://opensource.org/licenses/lgpl-3.0.html LGPL-3.0
+; tournaments module
+; proposed settings
+;
+; Part of »Zugzwang Project«
+; https://www.zugzwang.org/modules/tournaments
+;
+; @author Gustaf Mossakowski <gustaf@koenige.org>
+; @copyright Copyright © 2020-2021 Gustaf Mossakowski
+; @license http://opensource.org/licenses/lgpl-3.0.html LGPL-3.0
 ; 
 ; Syntax of this configuration file:
 ; 
