settings: add a few chess24_com settings, add ftp settings

--- a/configuration/settings.cfg
+++ b/configuration/settings.cfg
@@ -5,7 +5,7 @@
 ; https://www.zugzwang.org/modules/tournaments
 ;
 ; @author Gustaf Mossakowski <gustaf@koenige.org>
-; @copyright Copyright © 2020-2021 Gustaf Mossakowski
+; @copyright Copyright © 2020-2022 Gustaf Mossakowski
 ; @license http://opensource.org/licenses/lgpl-3.0.html LGPL-3.0
 ; 
 ; Syntax of this configuration file:
@@ -16,13 +16,71 @@
 ; - Field "default": default value
 ; - Field "db_field": corresponding database field (table.field)
 ;
+
+["chess24_com[chatRooms][0]"]
+description = "chess24 JSON: chat room for tournament, first language (English)"
+scope = [tournaments]
+
+["chess24_com[chatRooms][1]"]
+description = "chess24 JSON: chat room for tournament, further language (German)"
+scope = [tournaments]
+
+["chess24_com[chatRooms][2]"]
+description = "chess24 JSON: chat room for tournament, further language (Spanish)"
+scope = [tournaments]
+
+["chess24_com[chatRooms][3]"]
+description = "chess24 JSON: chat room for tournament, further language (French)"
+scope = [tournaments]
+
 ["chess24com[logo_url]"]
-description = "URL for logo of own organisation at chess24.com"
+description = "chess24 JSON: URL for logo of own organisation at chess24.com"
 type = url
+
+["chess24_com[titles][de]"]
+description = "chess24 JSON: title of tournament (German)"
+scope = [tournaments]
+
+["chess24_com[titles][en]"]
+description = "chess24 JSON: title of tournament (English)"
+scope = [tournaments]
+
+["chess24_com[titles][es]"]
+description = "chess24 JSON: title of tournament (Spanish)"
+scope = [tournaments]
+
+["chess24_com[titles][fr]"]
+description = "chess24 JSON: title of tournament (French)"
+scope = [tournaments]
+
+["chess24_com[descriptions][de]"]
+description = "chess24 JSON: description of tournament, HTML text (German)"
+scope = [tournaments]
+
+["chess24_com[descriptions][en]"]
+description = "chess24 JSON: description of tournament, HTML text (English)"
+scope = [tournaments]
+
+["chess24_com[descriptions][es]"]
+description = "chess24 JSON: description of tournament, HTML text (Spanish)"
+scope = [tournaments]
+
+["chess24_com[descriptions][fr]"]
+description = "chess24 JSON: description of tournament, HTML text (French)"
+scope = [tournaments]
 
 [filemove_begin_before_round_mins]
 description = "Time before the start of the round from which the PGN files (header tags) are transferred to the server"
 type = "int"
+
+["ftp_pgn[0]"]
+description = "destination FTP URL with username and password and up to two placeholders for tournament identifier (e. g. `2022-dem-u18`) where PGN files are uploaded to"
+
+["ftp_other[0][dest]"]
+description = "destination FTP URL with username and password to where other files are uploaded"
+
+["ftp_other[0][source]"]
+description = "local source URL (hostname optional) of other files for upload to FTP destination"
 
 [home_team_first_board]
 description = "Colour of player at first board of home team (default black, or white)"
