filemove: move default PGN folders to settings

--- a/configuration/settings.cfg
+++ b/configuration/settings.cfg
@@ -110,6 +110,26 @@ type = int
 description = "Delay in the publication of PGN files for live broadcasts"
 type = int
 
+[pgn_folder]
+description = "path to PGN files inside media folder which are imported to database"
+type = path
+default = "/pgn"
+
+[pgn_bulletin_folder]
+description = "path to PGN files inside media folder from bulletin team"
+type = path
+default = "/pgn-bulletin"
+
+[pgn_live_folder]
+description = "path to live PGN files inside media folder"
+type = path
+default = "/pgn-live"
+
+[pgn_queue_folder]
+description = "path to PGN queue inside media folder"
+type = path
+default = "/pgn-queue"
+
 [pgn_match_round_table_board]
 description = "Match Round, (Table, ) Board from PGN Round-tag if there are no matching names. (Important: do not use if PGNs from several tournaments are in one file!)"
 type = bool
