remove table turniere_partien, use setting 'tournaments_pgn_paths' per tournament instead; update function mf_tournaments_pgn_file_from_tournament() to read parameters, not data from turniere_partien (taken from chess module)

--- a/configuration/settings.cfg
+++ b/configuration/settings.cfg
@@ -139,6 +139,11 @@ scope = [tournaments]
 description = "If you get a PGN file with errors or missing names etc., you can chose to use a function to prepare that PGN file"
 scope = [website, tournaments]
 
+[tournaments_pgn_paths]
+description = "path to a PGN file, either on the local server or remote as URL, as a source for live game transmissions"
+type = list
+scope = [tournaments]
+
 [tournaments_remarks_mail_to]
 description = "send mails with remarks to tournament registrations to this mail address"
 type = mail
