--- a/configuration/settings.cfg
+++ b/configuration/settings.cfg
@@ -139,6 +139,10 @@ scope = [tournaments]
 description = "If you get a PGN file with errors or missing names etc., you can chose to use a function to prepare that PGN file"
 scope = [website, tournaments]
 
+[tournaments_coordinator_mail_to]
+description = "E-mail address of tournament coordinator of organisation"
+type = mail
+
 [tournaments_pgn_paths]
 description = "path to a PGN file, either on the local server or remote as URL, as a source for live game transmissions"
 type = list
