teams: only ask for address data if tournaments_request_address_data is set

--- a/configuration/settings.cfg
+++ b/configuration/settings.cfg
@@ -151,3 +151,7 @@ scope = [tournaments]
 [tournaments_remarks_mail_to]
 description = "send mails with remarks to tournament registrations to this mail address"
 type = mail
+
+[tournaments_request_address_data]
+description = "request to enter addresses of participants"
+type = bool
