pdf teilnehmerschilder: read series_parameters, merge with parameters; read usergroup_category; determine club_line and usergroup_line in separate functions; introduce parameter `pdf_group_line` to set group_line to a field value

--- a/configuration/settings.cfg
+++ b/configuration/settings.cfg
@@ -110,6 +110,10 @@ type = int
 description = "Delay in the publication of PGN files for live broadcasts"
 type = int
 
+[pdf_group_line]
+description = "field name to use for group_line in PDF exports"
+scope = [usergroups]
+
 [pgn_folder]
 description = "path to PGN files inside media folder which are imported to database"
 type = path
