settings: change type to path, list = 1 for `tournaments_pgn_paths`

--- a/configuration/settings.cfg
+++ b/configuration/settings.cfg
@@ -149,7 +149,8 @@ type = mail
 
 [tournaments_pgn_paths]
 description = "path to a PGN file, either on the local server or remote as URL, as a source for live game transmissions"
-type = list
+list = 1
+type = path
 scope = [tournaments]
 
 [tournaments_remarks_mail_to]
