access: add `tournaments_liveresults`

--- a/configuration/access.cfg
+++ b/configuration/access.cfg
@@ -18,6 +18,10 @@
 ;
 
 [tournaments_lineup_until_begin_of_round]
-description = "Allow to access and change lineup until beginning of round"
+description = "Access and change lineup until beginning of round"
 group = admin
 
+[tournaments_liveresults]
+description = "Enter live results during the tournament"
+group = admin
+page_placeholder_check = 1
