access: add `tournaments_swisschess`

--- a/configuration/access.cfg
+++ b/configuration/access.cfg
@@ -25,3 +25,8 @@ group = admin
 description = "Enter live results during the tournament"
 group = admin
 page_placeholder_check = 1
+
+[tournaments_swisschess]
+description = "Handle files from Swiss Chess, upload files, download .lst"
+group = admin
+page_placeholder_check = 1
