teams: add .separator class; allow access to foreign_key via `tournament_teams_foreign_key`, add setting `tournaments_team_league` with scope tournament showing field `spielbeginn`; always show filter Meldung

--- a/configuration/access.cfg
+++ b/configuration/access.cfg
@@ -30,3 +30,7 @@ page_placeholder_check = 1
 description = "Handle files from Swiss Chess, upload files, download .lst"
 group = admin
 page_placeholder_check = 1
+
+[tournament_teams_foreign_key]
+description = "change foreign key for team of an external tournament software"
+group = admin
