--- a/configuration/settings.cfg
+++ b/configuration/settings.cfg
@@ -160,3 +160,8 @@ type = mail
 [tournaments_request_address_data]
 description = "request to enter addresses of participants"
 type = bool
+
+[tournaments_team_league]
+description = "team tournament is a league, e. g. not played en bloc but every n weeks"
+type = bool
+scope = [tournaments]
