swt import/write: add access restriction `tournaments_swisschess_debug`, remove restriction inside function

--- a/configuration/access.cfg
+++ b/configuration/access.cfg
@@ -31,6 +31,11 @@ description = "Handle files from Swiss Chess, upload files, download .lst"
 group = admin
 page_placeholder_check = 1
 
+[tournaments_swisschess_debug]
+description = "Debug functions for Swiss Chess, e. g. manual import, deletion of keys etc."
+group = admin
+page_placeholder_check = 1
+
 [tournament_teams_foreign_key]
 description = "change foreign key for team of an external tournament software"
 group = admin
