filemove: add setting `live_pgn_offset_mins` to fix files transferred with an incorrect timestamp

--- a/configuration/settings.cfg
+++ b/configuration/settings.cfg
@@ -109,6 +109,12 @@ type = int
 [live_pgn_delay_mins]
 description = "Delay in the publication of PGN files for live broadcasts"
 type = int
+scope = [website, tournaments]
+
+[live_pgn_offset_mins]
+description = "offset if PGN files are transferred with an incorrect timestamp"
+type = int
+scope = [website, tournaments]
 
 [pdf_group_line]
 description = "field name to use for group_line in PDF exports"
