fix spelling of tournament_teams_foreign_key, tournaments_*, add access `tournaments_manual_triggers`

--- a/configuration/access.cfg
+++ b/configuration/access.cfg
@@ -26,6 +26,11 @@ description = "Enter live results during the tournament"
 group = admin
 page_placeholder_check = 1
 
+[tournaments_manual_triggers]
+description = "allow to trigger some background operations manually if something is stuck"
+group = admin
+page_placeholder_check = 1
+
 [tournaments_swisschess]
 description = "Handle files from Swiss Chess, upload files, download .lst"
 group = admin
@@ -36,6 +41,6 @@ description = "Debug functions for Swiss Chess, e. g. manual import, deletion of
 group = admin
 page_placeholder_check = 1
 
-[tournament_teams_foreign_key]
+[tournaments_teams_foreign_key]
 description = "change foreign key for team of an external tournament software"
 group = admin
