--- a/configuration/access.cfg
+++ b/configuration/access.cfg
@@ -18,11 +18,11 @@
 ;
 
 [tournaments_lineup_until_begin_of_round]
-description = "Access and change lineup until beginning of round"
+description = "access and change lineup until beginning of round"
 group = admin
 
 [tournaments_liveresults]
-description = "Enter live results during the tournament"
+description = "enter live results during the tournament"
 group = admin
 page_placeholder_check = 1
 
@@ -32,12 +32,12 @@ group = admin
 page_placeholder_check = 1
 
 [tournaments_swisschess]
-description = "Handle files from Swiss Chess, upload files, download .lst"
+description = "handle files from Swiss Chess, upload files, download .lst"
 group = admin
 page_placeholder_check = 1
 
 [tournaments_swisschess_debug]
-description = "Debug functions for Swiss Chess, e. g. manual import, deletion of keys etc."
+description = "debug functions for Swiss Chess, e. g. manual import, deletion of keys etc."
 group = admin
 page_placeholder_check = 1
 
