tournaments_rating_link: new setting (array), avoiding to hardcode this into template, set links for DWZ and Elo ratings

--- a/configuration/settings.cfg
+++ b/configuration/settings.cfg
@@ -159,6 +159,18 @@ list = 1
 type = path
 scope = [tournaments]
 
+["tournaments_rating_link[fide]"]
+description = "link to ratings on website of World Chess Federation (FIDE)"
+default = "https://ratings.fide.com/tournament_details.phtml?event=%d"
+
+["tournaments_rating_link[dwz]"]
+description = "link to ratings on website of German Chess Federation (DSB)"
+default = "https://www.schachbund.de/turnier/%s.html"
+
+["tournaments_rating_link[dwz_before_2011]"]
+description = "link to ratings on website of German Chess Federation (DSB) for tournaments before 2011"
+default = "http://altdwz.schachbund.net/turniere/%d.html?code=%s"
+
 [tournaments_remarks_mail_to]
 description = "send mails with remarks to tournament registrations to this mail address"
 type = mail
