settings: update `tournaments_rating_link[fide]`

--- a/configuration/settings.cfg
+++ b/configuration/settings.cfg
@@ -161,7 +161,7 @@ scope = [tournaments]
 
 ["tournaments_rating_link[fide]"]
 description = "link to ratings on website of World Chess Federation (FIDE)"
-default = "https://ratings.fide.com/tournament_details.phtml?event=%d"
+default = "https://ratings.fide.com/tournament_information.phtml?event=%d"
 
 ["tournaments_rating_link[dwz]"]
 description = "link to ratings on website of German Chess Federation (DSB)"
