add settings `tournaments_upload_pgn`, `tournaments_upload_swt` for disabling PGN and SWT upload

--- a/configuration/settings.cfg
+++ b/configuration/settings.cfg
@@ -183,3 +183,13 @@ type = bool
 description = "team tournament is a league, e. g. not played en bloc but every n weeks"
 type = bool
 scope = [tournaments]
+
+[tournaments_upload_pgn]
+description = "allow to upload PGN files"
+type = bool
+default = 1
+
+[tournaments_upload_swt]
+description = "allow to upload SWT files"
+type = bool
+default = 1
