access: add condition `tournament_id` for all access rights (only possible to access if event is tournament); add key `tournaments_rating_update`

--- a/configuration/access.cfg
+++ b/configuration/access.cfg
@@ -20,27 +20,39 @@
 [tournaments_lineup_until_begin_of_round]
 description = "access and change lineup until beginning of round"
 group = admin
+condition = tournament_id
 
 [tournaments_liveresults]
 description = "enter live results during the tournament"
 group = admin
 page_placeholder_check = 1
+condition = tournament_id
 
 [tournaments_manual_triggers]
 description = "allow to trigger some background operations manually if something is stuck"
 group = admin
 page_placeholder_check = 1
+condition = tournament_id
+
+[tournaments_rating_update]
+description = "allow update of all ratings before tournament begins"
+group = admin
+page_placeholder_check = 1
+condition = tournament_id
 
 [tournaments_swisschess]
 description = "handle files from Swiss Chess, upload files, download .lst"
 group = admin
 page_placeholder_check = 1
+condition = tournament_id
 
 [tournaments_swisschess_debug]
 description = "debug functions for Swiss Chess, e. g. manual import, deletion of keys etc."
 group = admin
 page_placeholder_check = 1
+condition = tournament_id
 
 [tournaments_teams_foreign_key]
 description = "change foreign key for team of an external tournament software"
 group = admin
+condition = tournament_id
