access: add `tournaments_playermessages`, read series_parameters in queries.sql, read `access_codes`

--- a/configuration/access.cfg
+++ b/configuration/access.cfg
@@ -34,6 +34,12 @@ group = admin
 page_placeholder_check = 1
 condition = tournament_id
 
+[tournaments_playermessages]
+description = "view, edit and print all player messages during a tournament"
+group = admin
+page_placeholder_check = 1
+condition = playermessages
+
 [tournaments_rating_update]
 description = "allow update of all ratings before tournament begins"
 group = admin
