settings: add settings for configuration.parameters for series

--- a/configuration/settings.cfg
+++ b/configuration/settings.cfg
@@ -5,7 +5,7 @@
 ; https://www.zugzwang.org/modules/tournaments
 ;
 ; @author Gustaf Mossakowski <gustaf@koenige.org>
-; @copyright Copyright © 2020-2022 Gustaf Mossakowski
+; @copyright Copyright © 2020-2023 Gustaf Mossakowski
 ; @license http://opensource.org/licenses/lgpl-3.0.html LGPL-3.0
 ; 
 ; Syntax of this configuration file:
@@ -16,6 +16,12 @@
 ; - Field "default": default value
 ; - Field "db_field": corresponding database field (table.field)
 ;
+
+[aks]
+description = "ages for extra age groups (e. g. for open tournaments)"
+type = int
+list = 1
+scope = [series]
 
 ["chess24_com[chatRooms][0]"]
 description = "chess24 JSON: chat room for tournament, first language (English)"
@@ -68,6 +74,11 @@ scope = [tournaments]
 ["chess24_com[descriptions][fr]"]
 description = "chess24 JSON: description of tournament, HTML text (French)"
 scope = [tournaments]
+
+[color]
+description = "color for tournament on badges and player cards, CSS format"
+type = bool
+scope = [series]
 
 [filemove_begin_before_round_mins]
 description = "Time before the start of the round from which the PGN files (header tags) are transferred to the server"
@@ -148,6 +159,16 @@ scope = [tournaments]
 [pgn_preparation_function]
 description = "If you get a PGN file with errors or missing names etc., you can chose to use a function to prepare that PGN file"
 scope = [website, tournaments]
+
+[playermessages]
+description = "allow to send messages to each player via a form (for single tournaments)"
+type = bool
+scope = [series]
+
+[show_main_tournament_archive]
+description = "show archive of main tournament, too"
+type = bool
+scope = [series]
 
 [tournaments_coordinator_mail_to]
 description = "E-mail address of tournament coordinator of organisation"
