access: add `tournaments_tournament_edit`

--- a/configuration/access.cfg
+++ b/configuration/access.cfg
@@ -5,7 +5,7 @@
 ; https://www.zugzwang.org/modules/tournaments
 ; 
 ; @author Gustaf Mossakowski <gustaf@koenige.org>
-; @copyright Copyright © 2022 Gustaf Mossakowski
+; @copyright Copyright © 2022-2023 Gustaf Mossakowski
 ; @license http://opensource.org/licenses/lgpl-3.0.html LGPL-3.0
 ; 
 ; Syntax of this configuration file:
@@ -60,5 +60,10 @@ condition = tournament_id
 
 [tournaments_teams_foreign_key]
 description = "change foreign key for team of an external tournament software"
+group = admin
+condition = tournament_id
+
+[tournaments_tournament_edit]
+description = "edit tournament details"
 group = admin
 condition = tournament_id
