access: add forgotten players access, read duplicateplayers, playerimages via webpages with access

--- a/configuration/access.cfg
+++ b/configuration/access.cfg
@@ -34,6 +34,25 @@ group = admin
 page_placeholder_check = 1
 condition = tournament_id
 
+[tournaments_players]
+description = "edit player list per tournament"
+group = admin
+page_placeholder_check = 1
+condition = tournament_id
+
+[tournaments_players_duplicate]
+description = "show players who are participating in more than one tournament of the series"
+group = admin
+page_placeholder_check = 1
+condition = series
+
+[tournaments_playerimages]
+description = "show missing player images per tournament"
+group = admin
+page_placeholder_check = 1
+condition[] = series
+condition[] = includes_single_tournaments
+
 [tournaments_playermessages]
 description = "view, edit and print all player messages during a tournament"
 group = admin
