access: include other access usergroups for `tournaments_players_duplicate`

--- a/configuration/access.cfg
+++ b/configuration/access.cfg
@@ -44,6 +44,7 @@ condition = tournament_id
 description = "show players who are participating in more than one tournament of the series"
 group = admin
 page_placeholder_check = 1
+include_access[] = tournaments_players
 condition = series
 
 [tournaments_playerimages]
