access: add `tournaments_games`, `tournaments_pairings`, `tournaments_rounds`, `tournaments_standings`; add `tournaments_standings_path`; read round form, standings form and games/pairings from webpages table, set access via wrap_access(); round form: define new access for PGN upload only; add roundinternal as script that diverts to either pairings or games

--- a/configuration/access.cfg
+++ b/configuration/access.cfg
@@ -17,6 +17,12 @@
 ; - Field "db_field": corresponding database field (table.field)
 ;
 
+[tournaments_games]
+description = "edit single games, upload PGN files"
+group = "read and write"
+page_placeholder_check = 1
+include_access[] = tournaments_pairings
+
 [tournaments_lineup_until_begin_of_round]
 description = "access and change lineup until beginning of round"
 group = admin
@@ -33,6 +39,11 @@ description = "allow to trigger some background operations manually if something
 group = admin
 page_placeholder_check = 1
 condition = tournament_id
+
+[tournaments_pairings]
+description = "add and edit single or team parings"
+group = "read and write"
+page_placeholder_check = 1
 
 [tournaments_players]
 description = "edit player list per tournament"
@@ -65,6 +76,17 @@ description = "allow update of all ratings before tournament begins"
 group = admin
 page_placeholder_check = 1
 condition = tournament_id
+
+[tournaments_rounds]
+description = "add and edit tournaments rounds"
+group = "read and write"
+condition = tournament_id
+page_placeholder_check = 1
+
+[tournaments_standings]
+description = "add and edit tournament standings"
+group = "read and write"
+page_placeholder_check = 1
 
 [tournaments_swisschess]
 description = "handle files from Swiss Chess, upload files, download .lst"
