--- a/configuration/settings.cfg
+++ b/configuration/settings.cfg
@@ -200,6 +200,11 @@ type = mail
 description = "request to enter addresses of participants"
 type = bool
 
+[tournaments_standings_path]
+description = "path to standings per round per tournament"
+type = path
+brick = "forms tabellenstaende *"
+
 [tournaments_team_league]
 description = "team tournament is a league, e. g. not played en bloc but every n weeks"
 type = bool
