access: add `tournaments_teams`, `tournaments_teams_registrations`; read parameters of event_category in queries;

--- a/configuration/access.cfg
+++ b/configuration/access.cfg
@@ -100,10 +100,20 @@ group = admin
 page_placeholder_check = 1
 condition = tournament_id
 
+[tournaments_teams]
+description = "add and edit teams of a tournament"
+group = "read and write"
+condition = team
+
 [tournaments_teams_foreign_key]
 description = "change foreign key for team of an external tournament software"
 group = admin
 condition = tournament_id
+
+[tournaments_teams_registrations]
+description = "access registration data of team tournaments, including PDFs"
+group = admin
+condition = team
 
 [tournaments_tournament_edit]
 description = "edit tournament details"
