--- a/configuration/access.cfg
+++ b/configuration/access.cfg
@@ -75,7 +75,8 @@ condition = playermessages
 description = "allow update of all ratings before tournament begins"
 group = admin
 page_placeholder_check = 1
-condition = tournament_id
+condition[] = tournament_id
+condition[] = future_or_running_event
 
 [tournaments_rounds]
 description = "add and edit tournaments rounds"
