access: change access for rounds, tournament to condition = tournament, but not series (tournament_id might not exist yet)

--- a/configuration/access.cfg
+++ b/configuration/access.cfg
@@ -81,7 +81,8 @@ condition[] = future_or_running_event
 [tournaments_rounds]
 description = "add and edit tournaments rounds"
 group = "read and write"
-condition = tournament_id
+condition = tournament
+condition_unless = series
 page_placeholder_check = 1
 
 [tournaments_standings]
@@ -119,4 +120,5 @@ condition = team
 [tournaments_tournament_edit]
 description = "edit tournament details"
 group = admin
-condition = tournament_id
+condition = tournament
+condition_unless = series
