access: restrict `tournaments_players_duplicate` to tournament series

--- a/configuration/access.cfg
+++ b/configuration/access.cfg
@@ -56,7 +56,8 @@ description = "show players who are participating in more than one tournament of
 group = admin
 page_placeholder_check = 1
 include_access[] = tournaments_players
-condition = series
+condition[] = series
+condition[] = tournament
 
 [tournaments_playerimages]
 description = "show missing player images per tournament"
