access: only allow to enter live results if a tournament is running; add access for tournament series

--- a/configuration/access.cfg
+++ b/configuration/access.cfg
@@ -32,7 +32,8 @@ condition = tournament_id
 description = "enter live results during the tournament"
 group = admin
 page_placeholder_check = 1
-condition = tournament_id
+condition[] = tournament
+condition[] = running_event
 
 [tournaments_manual_triggers]
 description = "allow to trigger some background operations manually if something is stuck"
