--- a/configuration/access.cfg
+++ b/configuration/access.cfg
@@ -93,10 +93,18 @@ group = "read and write"
 page_placeholder_check = 1
 
 [tournaments_swisschess]
-description = "handle files from Swiss Chess, upload files, download .lst"
+description = "handle files from Swiss Chess, upload files"
 group = admin
 page_placeholder_check = 1
 condition = tournament_id
+
+[tournaments_swisschess_lst]
+description = "handle files from Swiss Chess: download .lst"
+group = admin
+page_placeholder_check = 1
+condition[] = tournament_id
+condition[] = future_or_running_event
+include_access[] = tournaments_swisschess
 
 [tournaments_swisschess_debug]
 description = "debug functions for Swiss Chess, e. g. manual import, deletion of keys etc."
