access: for swiss chess upload/files, add condition for setting `tournaments_upload_swt`

--- a/configuration/access.cfg
+++ b/configuration/access.cfg
@@ -97,6 +97,14 @@ description = "handle files from Swiss Chess, upload files"
 group = admin
 page_placeholder_check = 1
 condition = tournament_id
+condition_if_setting = tournaments_upload_swt
+
+[tournaments_swisschess_debug]
+description = "debug functions for Swiss Chess, e. g. manual import, deletion of keys etc."
+group = admin
+page_placeholder_check = 1
+condition = tournament_id
+condition_if_setting = tournaments_upload_swt
 
 [tournaments_swisschess_lst]
 description = "handle files from Swiss Chess: download .lst"
@@ -105,12 +113,6 @@ page_placeholder_check = 1
 condition[] = tournament_id
 condition[] = future_or_running_event
 include_access[] = tournaments_swisschess
-
-[tournaments_swisschess_debug]
-description = "debug functions for Swiss Chess, e. g. manual import, deletion of keys etc."
-group = admin
-page_placeholder_check = 1
-condition = tournament_id
 
 [tournaments_teams]
 description = "add and edit teams of a tournament"
