access: add `tournaments_team_application`, `tournaments_team_application_addresses`, `tournaments_team_application_uploads`, query to check conditions

--- a/configuration/access.cfg
+++ b/configuration/access.cfg
@@ -114,6 +114,26 @@ condition[] = tournament_id
 condition[] = future_or_running_event
 include_access[] = tournaments_swisschess
 
+[tournaments_team_application]
+description = "application of a single team"
+group = "read and write"
+page_placeholder_check = 1
+
+[tournaments_team_application_addresses]
+description = "application of a single team: edit addresses"
+group = "read and write"
+condition = team_application_active
+include_access = tournaments_team_application
+page_placeholder_check = 1
+
+[tournaments_team_application_uploads]
+description = "application of a single team: upload files"
+group = "read and write"
+condition = team_application_complete
+condition_error = 403
+include_access = tournaments_team_application
+page_placeholder_check = 1
+
 [tournaments_teams]
 description = "add and edit teams of a tournament"
 group = "read and write"
