access: `tournaments_teams`, `tournaments_teams_registrations` not applicable for tournament series

--- a/configuration/access.cfg
+++ b/configuration/access.cfg
@@ -138,6 +138,7 @@ page_placeholder_check = 1
 description = "add and edit teams of a tournament"
 group = "read and write"
 condition = team
+condition_unless = series
 
 [tournaments_teams_foreign_key]
 description = "change foreign key for team of an external tournament software"
@@ -148,6 +149,7 @@ condition = tournament_id
 description = "access registration data of team tournaments, including PDFs"
 group = admin
 condition = team
+condition_unless = series
 
 [tournaments_tournament_edit]
 description = "edit tournament details"
