teams: use `tournaments_team_application_path` for link to internal tournament page, making the access check in form teams unnecessary

--- a/configuration/settings.cfg
+++ b/configuration/settings.cfg
@@ -205,6 +205,11 @@ description = "path to standings per round per tournament"
 type = path
 brick = "forms tabellenstaende *"
 
+[tournaments_team_application_path]
+description = "path to internal team application"
+type = path
+brick = "request eventinternal *"
+
 [tournaments_team_league]
 description = "team tournament is a league, e. g. not played en bloc but every n weeks"
 type = bool
