use wrap_setting() instead of wrap_get_setting() and global $zz_setting; remove unused global declarations; add `tournaments_public_url`

--- a/configuration/settings.cfg
+++ b/configuration/settings.cfg
@@ -180,6 +180,12 @@ list = 1
 type = path
 scope = [tournaments]
 
+[tournaments_public_url]
+description = "public URL of a tournament"
+type = url
+scope[] = internal
+default_from_module = 1
+
 ["tournaments_rating_link[fide]"]
 description = "link to ratings on website of World Chess Federation (FIDE)"
 default = "https://ratings.fide.com/tournament_information.phtml?event=%d"
