tournament: move maximum no. of players shown on page to settings `tournaments_players_compact_max`, `tournaments_players_compact_max_tolerance`, put 'round_no' into $events

--- a/configuration/settings.cfg
+++ b/configuration/settings.cfg
@@ -180,6 +180,16 @@ list = 1
 type = path
 scope = [tournaments]
 
+[tournaments_players_compact_max]
+description = "maximum no. of players to show in compact list/standings"
+type = int
+default = 20
+
+[tournaments_players_compact_max_tolerance]
+description = "tolerance factor for maximum no. of players in compact list (does not make sense to show 20 players but the 21st only on separate page)"
+type = number
+default = 1.25
+
 [tournaments_public_url]
 description = "public URL of a tournament"
 type = url
