swtimport: use jobmanager from default module for background job

--- a/configuration/access.cfg
+++ b/configuration/access.cfg
@@ -23,6 +23,11 @@ group = "read and write"
 page_placeholder_check = 1
 include_access[] = tournaments_pairings
 
+[tournaments_job_swt]
+description = "job that imports swiss chess files"
+group[] = admin
+group[] = localhost
+
 [tournaments_lineup_until_begin_of_round]
 description = "access and change lineup until beginning of round"
 group = admin
