--- a/configuration/settings.cfg
+++ b/configuration/settings.cfg
@@ -174,6 +174,11 @@ scope = [series]
 description = "E-mail address of tournament coordinator of organisation"
 type = mail
 
+[tournaments_job_swt_path]
+description = "path for job that imports swiss chess files"
+type = path
+brick = "make swtimport *"
+
 [tournaments_pgn_paths]
 description = "path to a PGN file, either on the local server or remote as URL, as a source for live game transmissions"
 list = 1
