--- a/configuration/access.cfg
+++ b/configuration/access.cfg
@@ -23,6 +23,11 @@ group = "read and write"
 page_placeholder_check = 1
 include_access[] = tournaments_pairings
 
+[tournaments_job_standings]
+description = "job that updates standings"
+group[] = admin
+group[] = localhost
+
 [tournaments_job_swt]
 description = "job that imports swiss chess files"
 group[] = admin
