--- a/configuration/settings.cfg
+++ b/configuration/settings.cfg
@@ -174,6 +174,11 @@ scope = [series]
 description = "E-mail address of tournament coordinator of organisation"
 type = mail
 
+[tournaments_job_standings_path]
+description = "path for job that updates standings"
+type = path
+brick = "make standings *"
+
 [tournaments_job_swt_path]
 description = "path for job that imports swiss chess files"
 type = path
