--- a/configuration/settings.cfg
+++ b/configuration/settings.cfg
@@ -174,6 +174,11 @@ scope = [series]
 description = "E-mail address of tournament coordinator of organisation"
 type = mail
 
+[tournaments_job_games_path]
+description = "path for job that updates games"
+type = path
+brick = "make games *"
+
 [tournaments_job_standings_path]
 description = "path for job that updates standings"
 type = path
