access: add condition for `tournaments_teams_registrations` that there need to be teams (PDFs make no sense without teams)

--- a/configuration/access.cfg
+++ b/configuration/access.cfg
@@ -163,7 +163,8 @@ condition = tournament_id
 [tournaments_teams_registrations]
 description = "access registration data of team tournaments, including PDFs"
 group = admin
-condition = team
+condition[] = team
+condition[] = teams
 condition_unless = series
 
 [tournaments_tournament_edit]
