filemove: add setting `pgn_bulletin_file_template`, allows to use a specific filename for PGN uploads from the bulletin team into a separate folder (instead of hardcoding the paths); use wrap_job() instead of trigger

--- a/configuration/settings.cfg
+++ b/configuration/settings.cfg
@@ -136,6 +136,10 @@ description = "path to PGN files inside media folder which are imported to datab
 type = path
 default = "/pgn"
 
+[pgn_bulletin_file_template]
+description = "file name template for bulletin files inside series folder inside bulletin folder per tournament (just base name, without .pgn)"
+scope[] = tournaments
+
 [pgn_bulletin_folder]
 description = "path to PGN files inside media folder from bulletin team"
 type = path
