use path tournaments_federation to link to federation page, not a custom link; use main_event_path (event year + series path) for that

--- a/configuration/access.cfg
+++ b/configuration/access.cfg
@@ -17,6 +17,10 @@
 ; - Field "db_field": corresponding database field (table.field)
 ;
 
+[tournaments_federation]
+description = "show all participants of a federation"
+group[] = public
+
 [tournaments_games]
 description = "edit single games, upload PGN files"
 group = "read and write"
