--- a/configuration/settings.cfg
+++ b/configuration/settings.cfg
@@ -178,6 +178,11 @@ scope = [series]
 description = "E-mail address of tournament coordinator of organisation"
 type = mail
 
+[tournaments_federation_path]
+description = "path to page which shows all participants of a federation"
+type = path
+brick = "request federation *"
+
 [tournaments_job_games_path]
 description = "path for job that updates games"
 type = path
