access: add `tournaments_list` (+ path), allows access to a list of all tournaments

--- a/configuration/access.cfg
+++ b/configuration/access.cfg
@@ -5,7 +5,7 @@
 ; https://www.zugzwang.org/modules/tournaments
 ; 
 ; @author Gustaf Mossakowski <gustaf@koenige.org>
-; @copyright Copyright © 2022-2023 Gustaf Mossakowski
+; @copyright Copyright © 2022-2024 Gustaf Mossakowski
 ; @license http://opensource.org/licenses/lgpl-3.0.html LGPL-3.0
 ; 
 ; Syntax of this configuration file:
@@ -46,6 +46,10 @@ group[] = localhost
 description = "access and change lineup until beginning of round"
 group = admin
 condition = tournament_id
+
+[tournaments_list]
+description = "show a list of all tournaments registered on platform"
+group = admin
 
 [tournaments_liveresults]
 description = "enter live results during the tournament"
