--- a/configuration/settings.cfg
+++ b/configuration/settings.cfg
@@ -5,7 +5,7 @@
 ; https://www.zugzwang.org/modules/tournaments
 ;
 ; @author Gustaf Mossakowski <gustaf@koenige.org>
-; @copyright Copyright © 2020-2023 Gustaf Mossakowski
+; @copyright Copyright © 2020-2024 Gustaf Mossakowski
 ; @license http://opensource.org/licenses/lgpl-3.0.html LGPL-3.0
 ; 
 ; Syntax of this configuration file:
@@ -197,6 +197,11 @@ brick = "make standings *"
 description = "path for job that imports swiss chess files"
 type = path
 brick = "make swtimport *"
+
+[tournaments_list_path]
+description = "list of all tournaments registered on platform"
+type = path
+brick = "tables tournaments"
 
 [tournaments_pgn_paths]
 description = "path to a PGN file, either on the local server or remote as URL, as a source for live game transmissions"
