add paths `tournaments_playercard`, `tournaments_team`

--- a/configuration/access.cfg
+++ b/configuration/access.cfg
@@ -83,6 +83,10 @@ include_access[] = tournaments_players
 condition[] = series
 condition[] = tournament
 
+[tournaments_playercard]
+description = "player card for single tournaments"
+group = public
+
 [tournaments_playerimages]
 description = "show missing player images per tournament"
 group = admin
@@ -136,6 +140,10 @@ page_placeholder_check = 1
 condition[] = tournament_id
 condition[] = future_or_running_event
 include_access[] = tournaments_swisschess
+
+[tournaments_team]
+description = "team on public website"
+group = public
 
 [tournaments_team_application]
 description = "application of a single team"
