--- a/configuration/settings.cfg
+++ b/configuration/settings.cfg
@@ -245,6 +245,11 @@ type = mail
 description = "request to enter addresses of participants"
 type = bool
 
+[tournaments_playercard_path]
+description = "path to player card for single tournaments"
+type = path
+brick = "request player *"
+
 [tournaments_standings_path]
 description = "path to standings per round per tournament"
 type = path
@@ -259,6 +264,11 @@ brick = "request eventinternal *"
 description = "team tournament is a league, e. g. not played en bloc but every n weeks"
 type = bool
 scope = [tournaments]
+
+[tournaments_team_path]
+description = "path to team on public website"
+type = path
+default = "/%s/"
 
 [tournaments_upload_pgn]
 description = "allow to upload PGN files"
